Fix for balldontlie api going behind a paywall